--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -30,7 +30,7 @@
         settings:searchable="false"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionDetailPreferenceController"/>
 
-     <!-- ROM Version -->
+    <!-- ROM Version -->
     <Preference
         android:key="gengkapak_version"
         android:title="@string/gengkapak_version_title"
@@ -38,6 +38,13 @@
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.GengKapakVersionPreferenceController"/>
 
+    <!-- Device Model-->
+    <Preference
+        android:key="device_model"
+        android:title="@string/device_model"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.AuroraModelPreferenceController"/>
+    
     <!-- Security patch -->
     <Preference
         android:key="security_key"
