--- a/res/values/astral_strings.xml
+++ b/res/values/astral_strings.xml
@@ -55,4 +55,7 @@
     <!-- Label for device's hardware ram size [CHAR LIMIT=40] -->
     <string name="total_ram">Total available RAM</string>
 
+    <!-- Astral maintainer -->
+    <string name="maintainer">Maintainer</string>
+  
 </resources>
