--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -37,8 +37,16 @@
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.AstralVersionPreferenceController"/>
-        
-    <!-- Security patch -->
+
+    <!-- Astral maintainer -->
+    <Preference
+        android:key="maintainer"
+        android:title="@string/maintainer"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.AstralMaintainerPreferenceController"/>
+  
+  <!-- Security patch -->
     <Preference
         android:key="security_key"
         android:title="@string/security_patch"
